[package]
name = "minecraft-vcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
figment = { version = "0.10.10", features = ["toml"] }
serde = "*"
yup-oauth2 = "8.3.0"
clap = { version = "4.3.23", features = ["derive"] }
